MULTISITE-2333 Fix search block display on IE

--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -2,6 +2,8 @@
 #search-block-form {
   .form-item {
     margin: 0;
+    padding: 0;
+    float: right;
     input {
       border-radius: 4px 0 0 4px;
       border-color: @btn-default-border;
